--- a/resources/offer.html
+++ b/resources/offer.html
@@ -462,8 +462,8 @@
     <div style="float: left;
 			width: 180px;">
         <ul class="footer-list" style="list-style: none; font-size: 9px; padding-left: 0; margin-left: 0;">
-            <li>Phone: +49 211 229 801 80</li>
-            <li>FAX: +49 211 229 801 99</li>
+            <li>Phone: +49 211 601 187 800/li>
+            <li></li>
             <li>info@eac-experts</li>
         </ul>
     </div>
